@@ -4,6 +4,7 @@
 	* Fix bug #3612: no c-prefix for URL fragment in menus (section index)
 	* Fix bug #2493: TCE-forms don't skins icons / t3skin lacks undo.gif, csv.gif  and savedoknew.gif (thanks to Clemens Riccabona for the latter)
 	* Fix bugs #3326 and #3392: problems with php_uname()
+	* "Update" buttons of admin panel did not reload page in Firefox
 
 2006-05-31  Ernesto Baschny <ernst@cron-it.de>
 
